testdata/golden/sema/valid/module_multitest/main.fmt
import scripts::{alpha, beta};
import bar::hello;
import point;

@entrypoint
fn main() {
    print(alpha());
    print(beta());
    print(hello());
    print(point.point());
}
