testdata/golden/sema/invalid/variadic_not_last.fmt
fn bad(...args: int, x: int) {}

fn main() {}
